	- disabled /tw wildperm, usedefault and wildignore if using permissions. Add permission nodes for these.
	- Added a fix to prevent players firing from the wild into a PVP disabled town to attack.
	- Added '/town set fire [on/off]' to prevent fire damage/spread in a town.
	- Fixed an error where a town/nation data file may not be moved if a previous town/nation of the same name had been deleted/renamed prior.
V0.71.4 RC2:
    - Added to Wildzone ignore ID's - Wood, flowers, tall grass, leaves, cacti, pumpkins, sugarcane, mushrooms, saplings.
    - Added code to reset world wildzone ignore ID's to default at first run.
    - Fixed typo on Firespread message in language file.
    - Added 'wartime_nation_can_be_neutral' to the config.
      This setting permits you to disable the ability for a nation to remain neutral during a war.
      Toggle in game with '/townyadmin war neutral [on/off]
    - Added fs as an abreviation for forsale when used in '/plot forsale'. 
    - Corrected an error when a nation sets neutral status. No message was sent of the cost.
    - Added global messages of what nations are at war.
    - Added better sanity checking on the global neutral settings.
    - Towny should no longer erase resident/town data on exit if there was a loading problem.
    - Moved last of the CSV files to the yml, and depreciated config settings for save_onload and first_run.
    - Fixed Nation prefix and suffix to read from the new config.yml entries
    - Depreciated all default prefix/poxfix entries. Now uses the new townLevel and nationLevel entries in config.yml
    - Added new settings for disabling world monster spawns and town control over mob spawns within their walls.
    - Changes to /townyadmin commands for war, neutral, townmobs, worldmobs, devmode and debug. Now use /townyadmin toggle XXX.
v0.72.1:
    - Fix an error on new installs where towny would not auto create the data/worlds/XXX.txt files.
v0.72.2:
    - Fixed a few typos in the language file.